--- a/index.html
+++ b/index.html
@@ -8,71 +8,72 @@
   <title>Landing page with curved sections</title>
 </head>
 <body>
-  
+
   <div class="ribbon">
     <div class="logo">
       <img src="images/logo.svg" alt="">
-      <h1>Huddle</h1>
     </div>
     <button>Try it free</button>
-  </div>  
+  </div>
 
 <div class="wrapper">
   <div class="hero">>
     <h1>Build The Community Your Fans Will Love</h1>
 
-    <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p> 
+    <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
 
     <a href="">Get Started For Free</a>
   </div>
     <img src="images/screen-mockups.svg" alt="">
-    
+
     <div class="grid">
       <div>
         <img src="images/icon-communities.svg" alt="">
-        1.4k+
-        Communities Formed
+        <h2>1.4k+</h2>
+        <p>Communities Formed</p>
       </div>
       <div>
         <img src="images/icon-messages.svg" alt="">
-        2.7m+
-        Messages Sent
+        <h2>2.7m+</h2>
+        <p>Messages Sent</p>
       </div>
   </div>
+  <div>
+    Grow Together
+    Generate meaningful discussions with your audience and build a strong, loyal community.
+    Think of the insightful conversations you miss out on with a feedback form.
 
-  Grow Together
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
+    Flowing Conversations
+    You wouldn't paginate a conversation in real life, so why do it online? Our threads have
+    just-in-time loading for a more natural flow.
 
-  Flowing Conversations
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
-  just-in-time loading for a more natural flow.
-
-  Your Users
-  It takes no time at all to integrate Huddle with your app's authentication solution. This means, 
-  once signed in to your app, your users can start chatting immediately.
-
-  Ready To Build Your Community?
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia 
-  vestibulum a, ultrices quis sem.
-  
-  Phone: +1-543-123-4567
-  example@huddle.com
+    Your Users
+    It takes no time at all to integrate Huddle with your app's authentication solution. This means,
+    once signed in to your app, your users can start chatting immediately.
+  </div>
+  <div class="wrapper">
+  <h1>Ready To Build Your Community?</h1>
+  <a href="#">Get Started For Free</a>
+  <div class="flexbox">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.
+      <br><br>
+      Phone: +1-543-123-4567
+      <br><br>
+      example@huddle.com
+    </p>
 
   Newsletter
-  To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never 
-  send you spam or pass on your email address
-
-  Subscribe
-
+  <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address</p>
+  <form action=""></form>
+  <button>Subscribe</button>
 </div>
+</div>
+</body>
   <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="https://kristacalleja.github.io">Krista Calleja</a>.
     </p>
   </footer>
-</body>
+
 </html>
