--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <div class="logo">
       <img src="images/logo.svg" alt="">
     </div>
-    <button>Try it free</button>
+    <span>Try it Free</span>
   </div>
 
 <div class="wrapper">
-  <div class="hero">>
+  <div class="hero">
     <h1>Build The Community Your Fans Will Love</h1>
 
     <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
 
-    <a href="">Get Started For Free</a>
-  </div>
+    <a href="#">Get Started For Free</a>
     <img src="images/screen-mockups.svg" alt="">
+  </div>
 
     <div class="grid">
       <div>
@@ -38,42 +38,51 @@
         <p>Messages Sent</p>
       </div>
   </div>
+
+  <img src="images/bg-section-top-desktop-1.svg" alt="">
   <div>
-    Grow Together
-    Generate meaningful discussions with your audience and build a strong, loyal community.
-    Think of the insightful conversations you miss out on with a feedback form.
-
-    Flowing Conversations
-    You wouldn't paginate a conversation in real life, so why do it online? Our threads have
-    just-in-time loading for a more natural flow.
-
-    Your Users
-    It takes no time at all to integrate Huddle with your app's authentication solution. This means,
-    once signed in to your app, your users can start chatting immediately.
+    <div class="grow">
+      <b>Grow Together</b>
+      <c>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</c>
+    </div>
+    <div class="flowing">
+      <b>Flowing Conversations</b>
+      <c>You wouldn't paginate a conversation in real life, so why do it online? Our threads have
+      just-in-time loading for a more natural flow.</c>
+    </div>
+    <div class="users">
+      <b>Your Users</b>
+      <c>It takes no time at all to integrate Huddle with your app's authentication solution. This means,
+      once signed in to your app, your users can start chatting immediately.</c>
+    </div>  
   </div>
-  <div class="wrapper">
-  <h1>Ready To Build Your Community?</h1>
-  <a href="#">Get Started For Free</a>
-  <div class="flexbox">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.
-      <br><br>
-      Phone: +1-543-123-4567
-      <br><br>
-      example@huddle.com
-    </p>
 
-  Newsletter
-  <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address</p>
-  <form action=""></form>
-  <button>Subscribe</button>
-</div>
-</div>
+  <div class="wrapper">
+    <h1>Ready To Build Your Community?</h1>
+    <a href="#">Get Started For Free</a>
+  </div>  
 </body>
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="https://kristacalleja.github.io">Krista Calleja</a>.
-    </p>
-  </footer>
+    <div class="flexbox">
+      <div>
+        <img src="images/logo.svg" alt="">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.
+          <br><br>
+          Phone: +1-543-123-4567
+          <br><br>
+          example@huddle.com
+        </p>
+      </div>  
+      <div>
+        <h3>Newsletter</h3>
+        <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address</p>
+        <input type="text">
+        <button>Subscribe</button>
+      </div>
+    </div>  
+
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="https://kristacalleja.github.io">Krista Calleja</a>.
+      </p>
 
 </html>
