--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 </head>
 <body>
 
-  <div class="ribbon">
+  <div class="navbar">
     <div class="logo">
       <img src="images/logo.svg" alt="">
     </div>
-    <span>Try it Free</span>
+    <ul>
+      <li><span>Try it Free</span></li>
+    </ul>
   </div>
 
 <div class="wrapper">
@@ -54,7 +56,7 @@
     </div>
     <img src="images/bg-section-bottom-desktop-1.svg" alt="">
       
-    <div class="box excluded">
+    <div class="box">
       <div class="box-illustration">
         <img src="images/illustration-flowing-conversation.svg" alt="">
       </div>
