--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img src="images/logo.svg" alt="">
     </div>
     <ul>
-      <li><span>Try it Free</span></li>
+      <li><a href="#">Try it Free</a></li>
     </ul>
   </div>
 
