Split section with responsive design

--- a/index.html
+++ b/index.html
@@ -21,28 +21,30 @@
   </div>
 
 <div class="wrapper">
+  <!-- Hero -->
   <div class="hero">
     <h1>Build The Community Your Fans Will Love</h1>
-
-    <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
-
-    <a href="#">Get Started For Free</a>
+      <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
+    <a href="#" class="cta">Get Started For Free</a>
     <img src="images/screen-mockups.svg" alt="">
   </div>
-
-    <div class="values">
-      <div>
-        <img src="images/icon-communities.svg" alt="">
-        <h2>1.4k+</h2>
-        <p>Communities Formed</p>
-      </div>
-      <div>
-        <img src="images/icon-messages.svg" alt="">
-        <h2>2.7m+</h2>
-        <p>Messages Sent</p>
-      </div>
-      <!-- End of wrapper -->
+  <!-- End of hero -->
+  <!-- Split screen -->
+  <div class="split">
+    <div>
+      <img src="images/icon-communities.svg" alt="">
+      <h2>1.4k+</h2>
+      <p>Communities Formed</p>
     </div>
+    <div>
+      <img src="images/icon-messages.svg" alt="">
+      <h2>2.7m+</h2>
+      <p>Messages Sent</p>
+    </div>
+  </div>
+  <!-- End of split -->
+</div>
+<!-- End of wrapper -->
     
 <div class="container">
   <img src="images/bg-section-top-desktop-1.svg" alt="">
@@ -63,7 +65,7 @@
         <img src="images/illustration-flowing-conversation.svg" alt="">
       </div>
       <div class="box-text">
-        <h2>Flowing Conversations</h2>
+        <h3>Flowing Conversations</h3>
         <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
       </div>  
     </div>
@@ -72,7 +74,7 @@
     
     <div class="box">
       <div class="box-text">
-        <h2>Your Users</h2>
+        <h3>Your Users</h3>
           <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
       </div>
       <div class="box-illustration">
@@ -86,8 +88,7 @@
 <div class="wrapper">
   <div class="hero">
     <h1>Ready To Build Your Community?</h1>
-
-    <a href="#">Get Started For Free</a>
+    <a class="cta" href="#">Get Started For Free</a>
   </div>
 </div>  
 </body>
