--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
   <!-- End of split -->
 </div>
 <!-- End of wrapper -->
-    
-<div class="container">
-  <img src="images/bg-section-top-desktop-1.svg" alt="">
+<!-- Alternate layout -->
+<div class="alternate-layout">
   <div class="grid-boxes">
-    <div class="box">
+  <img src="images/bg-section-top-desktop-1.svg" alt="">
+    <div class="box box-shaded">
       <div class="box-text">
           <h2>Grow Together</h2>
           <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
@@ -72,7 +72,7 @@
 
     <img src="images/bg-section-top-desktop-1.svg" alt="">
     
-    <div class="box">
+    <div class="box box-shaded">
       <div class="box-text">
         <h3>Your Users</h3>
           <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
