--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@700&display=swap" rel="stylesheet"> 
+  <script src="https://kit.fontawesome.com/57201b0ab6.js" crossorigin="anonymous"></script>
   <title>Landing page with curved sections</title>
 </head>
 <body>
@@ -87,31 +88,35 @@
     <h1>Ready To Build Your Community?</h1>
     <a class="cta" href="#">Get Started For Free</a>
   </div>
-</div>  
+</div>
 <!-- Footbar -->
-<img src="images/bg-footer-top-desktop.svg" alt="">
-<div class="flexbox">
-  <div>
+<img src="images/bg-footer-top-desktop.svg" style="width: 100%" alt="">
+<div class="footbar">
+  <div class="left-scene">
     <img src="images/logo.svg" alt="">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.
-      <br><br>
-      Phone: +1-543-123-4567
-      <br><br>
-      example@huddle.com
+      <div>
+        <p>Phone: +1-543-123-4567</p>
+      </div>
+      <div>
+        <p>example@huddle.com</p>
+      </div>
     </p>
   </div>  
-  <div>
+  <div class="right-scene">
     <h3>Newsletter</h3>
     <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address</p>
     <input type="text">
     <button>Subscribe</button>
   </div>
-</div>  
-
-<p class="attribution">
-  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-  Coded by <a href="https://kristacalleja.github.io">Krista Calleja</a>.
-</p>
+</div>
+<div class="links">
+  <ul>
+    <li><i class="fab fa-facebook-square"></i></li>
+    <li><i class="fab fa-instagram"></i></li>
+    <li><i class="fab fa-twitter-square"></i></li>
+  </ul>
+</div>
 
 </body>
 </html>
