Add and style form

--- a/index.html
+++ b/index.html
@@ -96,27 +96,28 @@
     <img src="images/logo.svg" alt="">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.
       <div>
-        <p>Phone: +1-543-123-4567</p>
+        <p><i class="fas fa-phone-alt"></i> Phone: +1-543-123-4567</p>
       </div>
       <div>
-        <p>example@huddle.com</p>
+        <p><i class="fas fa-envelope"></i> example@huddle.com</p>
       </div>
     </p>
   </div>  
   <div class="right-scene">
     <h3>Newsletter</h3>
     <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address</p>
-    <input type="text">
-    <button>Subscribe</button>
+    <form action="">
+      <input type="text">
+      <button type="submit">Subscribe</button>
+  </form>
+  </div>
+  <div class="links">
+    <ul>
+      <li><i class="fab fa-facebook-square"></i></li>
+      <li><i class="fab fa-instagram"></i></li>
+      <li><i class="fab fa-twitter-square"></i></li>
+    </ul>
   </div>
 </div>
-<div class="links">
-  <ul>
-    <li><i class="fab fa-facebook-square"></i></li>
-    <li><i class="fab fa-instagram"></i></li>
-    <li><i class="fab fa-twitter-square"></i></li>
-  </ul>
-</div>
-
 </body>
 </html>
