--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <h3>Newsletter</h3>
     <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address</p>
     <form action="">
-      <input type="text">
+      <input required type="text">
       <button type="submit">Subscribe</button>
   </form>
   </div>
