Mobile responsive for footbar

--- a/index.html
+++ b/index.html
@@ -92,7 +92,17 @@
 <!-- Footbar -->
 <img src="images/bg-footer-top-desktop.svg" style="width: 100%" alt="">
 <div class="footbar">
-  <div class="left-scene">
+  
+  <div class="top-scene">
+    <h3>Newsletter</h3>
+    <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address</p>
+    <form action="">
+      <input required type="text">
+      <button type="submit">Subscribe</button>
+  </form>
+  </div>
+  
+  <div class="bottom-scene">
     <img src="images/logo.svg" alt="">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.
       <div>
@@ -102,22 +112,14 @@
         <p><i class="fas fa-envelope"></i> example@huddle.com</p>
       </div>
     </p>
+    <div class="links">
+      <ul>
+        <li><i class="fab fa-facebook-square"></i></li>
+        <li><i class="fab fa-instagram"></i></li>
+        <li><i class="fab fa-twitter-square"></i></li>
+      </ul>
+    </div>
   </div>  
-  <div class="right-scene">
-    <h3>Newsletter</h3>
-    <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address</p>
-    <form action="">
-      <input required type="text">
-      <button type="submit">Subscribe</button>
-  </form>
-  </div>
-  <div class="links">
-    <ul>
-      <li><i class="fab fa-facebook-square"></i></li>
-      <li><i class="fab fa-instagram"></i></li>
-      <li><i class="fab fa-twitter-square"></i></li>
-    </ul>
-  </div>
 </div>
 </body>
 </html>
