--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
 <body>
 
   <div class="navbar">
-    <div class="logo">
+    <a class="logo">
       <img src="images/logo.svg" alt="">
-    </div>
-    <ul>
-      <li><a href="#">Try it Free</a></li>
-    </ul>
+    </a>
+    <a class="btn">Try it Free</a>
   </div>
 
 <div class="wrapper">
