--- a/index.html
+++ b/index.html
@@ -1,121 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@700&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@700&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="https://kit.fontawesome.com/57201b0ab6.js" crossorigin="anonymous"></script>
   <title>Landing page with curved sections</title>
 </head>
+
 <body>
-
-  <div class="navbar">
-    <a class="logo">
-      <img src="images/logo.svg" alt="">
-    </a>
-    <a class="btn">Try it Free</a>
-  </div>
-
-<div class="wrapper">
-  <!-- Hero -->
-  <div class="hero">
-    <h1>Build The Community Your Fans Will Love</h1>
-      <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
-    <a href="#" class="cta">Get Started For Free</a>
-    <img src="images/screen-mockups.svg" alt="">
-  </div>
-  <!-- End of hero -->
-  <!-- Split screen -->
-  <div class="split">
-    <div>
-      <img src="images/icon-communities.svg" alt="">
-      <h2>1.4k+</h2>
-      <p>Communities Formed</p>
+  <div class="wrapper">
+    <nav>
+      <img src="images/logo.svg" alt="Huddle logo" style="height: 2em;">
+      <a href="#" class="btn">Try it Free</a>
+    </nav>
+    <div class="banner">
+      <h1>Build The Community Your Fans Will Love</h1>
+      <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create
+        connections with your users as you engage in genuine discussion.</p>
+      <a href="#" class="cta">Get Started For Free</a>
     </div>
-    <div>
-      <img src="images/icon-messages.svg" alt="">
-      <h2>2.7m+</h2>
-      <p>Messages Sent</p>
-    </div>
-  </div>
-  <!-- End of split -->
-</div>
-<!-- End of wrapper -->
-<!-- Alternate layout -->
-<section class="alternate-layout">
-  <div class="grid-boxes">
-  <img src="images/bg-section-top-desktop-1.svg" alt="">
-    <div class="box box-shaded">
-      <div class="box-text">
-          <h2>Grow Together</h2>
-          <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
-        </div>
-        <div class="box-illustration">
-          <img src="images/illustration-grow-together.svg" alt="">
-        </div>
-    </div>
-    <img src="images/bg-section-bottom-desktop-1.svg" alt="">
-    <div class="box">
-      <div class="box-illustration">
-        <img src="images/illustration-flowing-conversation.svg" alt="">
-      </div>
-      <div class="box-text">
-        <h3>Flowing Conversations</h3>
-        <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
-      </div>  
-    </div>
-    <img src="images/bg-section-top-desktop-1.svg" alt="">
-    <div class="box box-shaded">
-      <div class="box-text">
-        <h3>Your Users</h3>
-          <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
-      </div>
-      <div class="box-illustration">
-        <img src="images/illustration-your-users.svg" alt="">
-    </div>
-    </div>
-  </div>
-  <img src="images/bg-section-bottom-desktop-1.svg" alt="">
-</section>
-<!-- End alternate-layout -->
-<div class="wrapper">
-  <div class="hero">
-    <h1>Ready To Build Your Community?</h1>
-    <a class="cta" href="#">Get Started For Free</a>
-  </div>
-</div>
-<!-- Footbar -->
-<img src="images/bg-footer-top-desktop.svg" style="width: 100%" alt="">
-<div class="footbar">
-  <div class="top-scene">
-    <h3>Newsletter</h3>
-    <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address</p>
-    <form action="">
-      <input required type="text">
-      <button type="submit">Subscribe</button>
-  </form>
-  </div>
-  <div class="bottom-scene">
-    <img src="images/logo.svg" alt="">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.
+    <img src="images/screen-mockups.svg" alt="screen mockups" style="width: 80%; margin:auto">
+    <div class="split">
       <div>
-        <p><i class="fas fa-phone-alt"></i> Phone: +1-543-123-4567</p>
+        <img src="images/icon-communities.svg" alt="icon of commnunities">
+        <h2>1.4k+</h2>
+        <p>Communities Formed</p>
       </div>
       <div>
-        <p><i class="fas fa-envelope"></i> example@huddle.com</p>
+        <img src="images/icon-messages.svg" alt="icon of messages">
+        <h2>2.7m+</h2>
+        <p>Messages Sent</p>
       </div>
-    </p>
-    <div class="links">
-      <ul>
-        <li><i class="fab fa-facebook-square"></i></li>
-        <li><i class="fab fa-instagram"></i></li>
-        <li><i class="fab fa-twitter-square"></i></li>
-      </ul>
     </div>
-  </div>  
-</div>
+    <section>
+      <div class="ribbon ribbon-1">
+        <div>
+          <h3>Grow Together</h3>
+          <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the
+            insightful conversations you miss out on with a feedback form.</p>
+        </div>
+        <img src="images/illustration-grow-together.svg" alt="illustration of work colleagues">
+      </div>
+      <div class="ribbon ribbon-2">
+        <img src="images/illustration-flowing-conversation.svg" alt="illustration of people sitting at a table talking">
+        <div>
+          <h3>Flowing Conversations</h3>
+          <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time
+            loading for a more natural flow.</p>
+        </div>
+      </div>
+      <div class="ribbon ribbon-3">
+        <div>
+          <h3>Your Users</h3>
+          <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once
+            signed in to your app, your users can start chatting immediately.</p>
+        </div>
+        <img src="images/illustration-your-users.svg" alt="illustration of users posting">
+      </div>
+    </section>
+    <div class="banner">
+      <h1>Ready To Build Your Community?</h1>
+      <a class="cta" href="#">Get Started For Free</a>
+    </div>
+    <footer>
+      <div class="footer">
+        <div>
+          <div>
+            <h2>Newsletter</h2>
+            <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you
+              spam
+              or pass on your email address</p>
+          </div>
+          <form action="#">
+            <input required type="text" onfocus="this.value=''">
+            <button type="submit">Subscribe</button>
+          </form>
+        </div>
+        <div>
+          <img src="images/logo.svg" alt="Huddle logo">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a,
+            ultrices quis sem.</p>
+          <p><i class="fas fa-phone-alt"></i> Phone: +1-543-123-4567</p>
+          <p><i class="fas fa-envelope"></i> example@huddle.com</p>
+          <div class="links">
+            <a href="#"><i class="fab fa-facebook-square"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-twitter-square"></i></a>
+          </div>
+        </div>
+      </div>
+  </div>
+  </footer>
+  <div style="text-align: center;">
+    <p>Challenge by <a
+        href="https://www.frontendmentor.io/challenges/huddle-landing-page-with-curved-sections-5ca5ecd01e82137ec91a50f2"
+        target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://kristacalleja.github.io/">Krista Calleja | UI Developer</a>.</p>
+  </div>
+  <script src="custom.js"></script>
 </body>
+
 </html>
